--- a/API.html
+++ b/API.html
@@ -87,8 +87,8 @@ th.destination, td.destination {
 @keyframes blink { 0%,50%,100% {opacity:1;} 25%,75% {opacity:0;} }
 #scroll-body {
     flex: 1;
-    height: 100%;         /* fills available space */
-    overflow: hidden;     /* ensures clean scroll */
+    height: 100%;     /* 👈 ensures it fills the wrapper */
+    overflow: hidden;
     position: relative;
 }
 
@@ -324,5 +324,6 @@ setInterval(fetchDepartures,600000);
 
 </body>
 </html>
+
 
 
