--- a/API.html
+++ b/API.html
@@ -107,7 +107,7 @@ th.destination, td.destination { width:500px; }      /* Destination */
 tbody tr { height: 50px; }
 
 /* Flight status colors */
-.status-scheduled { color: #00f; font-weight: bold; }
+.status-scheduled { color: #5DE2E7; font-weight: bold; }
 .status-enroute { color: #0f0; font-weight: bold; }
 .status-departed { color: #888; font-weight: bold; }
 .status-delayed { color: #f00; font-weight: bold; }
@@ -326,3 +326,4 @@ setInterval(fetchDepartures, 600000);
 </script>
 </body>
 </html>
+
